delete web.xml and servlet.xml becasue we configure with java code instead

--- a/src/main/webapp/WEB-INF/views/errorpage.html
+++ b/src/main/webapp/WEB-INF/views/errorpage.html
@@ -2,6 +2,6 @@
 <body>
 	${message}
 	<br><br>
-	<jsp:include page="/index.jsp"></jsp:include>
+	<jsp:include page="/indexdddd.jsp"></jsp:include>
 </body>
 </html>
