feature: insert to table category, edit html css style ref: https://riptutorial.com/thymeleaf/example/29269/form-submission

--- a/src/main/webapp/WEB-INF/views/category/addCategory.html
+++ b/src/main/webapp/WEB-INF/views/category/addCategory.html
@@ -20,6 +20,7 @@
 			</div>
 			<div class="pull-right">
 				<input type="submit" value="Submit" class="btn btn-primary"/>
+				<input onclick="window.location.href = 'listOfCategories'" class="btn btn-secondary" value="Cancel"/>
 			</div>
 		</form>
 	</div>
