working on delete and update

--- a/src/main/webapp/WEB-INF/views/category/ListCategories.html
+++ b/src/main/webapp/WEB-INF/views/category/ListCategories.html
@@ -22,6 +22,7 @@
 					<th>Code</th>
 					<th>Name</th>
 					<th>Description</th>
+					<th>Action</th>
 				</tr>
 			</thead>
 			<tbody>
@@ -30,6 +31,7 @@
 						<td th:text="${category.code}"></td>
 						<td th:text="${category.name}"></td>
 						<td th:text="${category.desc}"></td>
+						<td><a href="#" onclick="if(!(confirm('Are you sure want to delete the record?'))) return false;"></a></td>
 					</tr>
 				</th:block>
 			</tbody>
