function delete, worked. Ref: https://www.logicbig.com/tutorials/spring-framework/spring-web-mvc/spring-mvc-request-param.html

--- a/src/main/webapp/WEB-INF/views/category/Category.html
+++ b/src/main/webapp/WEB-INF/views/category/Category.html
@@ -8,6 +8,7 @@
 </head>
 <body>
 	<div class="container">
+		<h2>Add Category</h2>
 		<form th:action="@{/category/saveProcess}" th:object="${category}">
 			<div class="form-group">
 				<label>Code:</label> <input type="text" class="form-control" th:field="*{code}" placeholder="Enter Code" />
