--- a/src/main/webapp/WEB-INF/views/category/ListCategories.html
+++ b/src/main/webapp/WEB-INF/views/category/ListCategories.html
@@ -31,7 +31,9 @@
 						<td th:text="${category.code}"></td>
 						<td th:text="${category.name}"></td>
 						<td th:text="${category.desc}"></td>
-						<td><a href="#" onclick="if(!(confirm('Are you sure want to delete the record?'))) return false;"></a></td>
+						<!-- <td><a href="#"  onclick="if(!(confirm('Are you sure want to delete the record?'))) return false;">Delete</a></td>
+						 -->
+						<td><a th:href="@{'/category/deleteCategory?categoryCode=' + ${category.code}}">Delete</a></td>  
 					</tr>
 				</th:block>
 			</tbody>
