function update, work.Using map for passing param to xml mapping update. Ref: https://stackoverflow.com/questions/25027801/how-to-set-thymeleaf-thfield-value-from-other-variable and http://www.programmersought.com/article/1809115423/

--- a/src/main/webapp/WEB-INF/views/category/ListCategories.html
+++ b/src/main/webapp/WEB-INF/views/category/ListCategories.html
@@ -31,9 +31,10 @@
 						<td th:text="${category.code}"></td>
 						<td th:text="${category.name}"></td>
 						<td th:text="${category.desc}"></td>
-						<!-- <td><a href="#"  onclick="if(!(confirm('Are you sure want to delete the record?'))) return false;">Delete</a></td>
-						 -->
-						<td><a th:href="@{'/category/deleteCategory?categoryCode=' + ${category.code}}">Delete</a></td>  
+						<td>
+							<a class="btn btn-primary" th:href="@{'/category/updateCategory?categoryCode=' + ${category.code}}">Update</a>
+							<a class="btn btn-danger" th:href="@{'/category/deleteCategory?categoryCode=' + ${category.code}}">Delete</a>							
+						</td>
 					</tr>
 				</th:block>
 			</tbody>
