create FAQ Board and applied css, ref: https://www.youtube.com/watch?v=MXrtXg1kpVshttps://www.youtube.com/watch?v=MXrtXg1kpVs

--- a/src/main/webapp/WEB-INF/views/faq-board/faq-board.html
+++ b/src/main/webapp/WEB-INF/views/faq-board/faq-board.html
@@ -91,7 +91,8 @@ src="https://pagead2.googlesyndication.com/pagead/show_ads.js">
                 <i class="fa fa-plus"></i>
                 <i class="fa fa-minus"></i>
             </div>
-            <div class="content">Contrary to popular belief, Lorem Ipsum
+            <div class="content">
+            Contrary to popular belief, Lorem Ipsum
 			is not simply random text. It has roots in a piece of 
 			classical Latin literature from 45 BC, making it over
 			2000 years old. Richard McClintock, a Latin professor
@@ -117,7 +118,8 @@ src="https://pagead2.googlesyndication.com/pagead/show_ads.js">
                 <i class="fa fa-plus"></i>
                 <i class="fa fa-minus"></i>
             </div>
-            <div class="content">There are many variations of passages of Lorem
+            <div class="content">
+            There are many variations of passages of Lorem
 			Ipsum available, but the majority have suffered alteration in some
 			form, by injected humour, or randomised words which don't look
 			even slightly believable. If you are going to use a passage of
