--- a/src/main/webapp/WEB-INF/views/faq-board/faq-board.html
+++ b/src/main/webapp/WEB-INF/views/faq-board/faq-board.html
@@ -1,175 +1,92 @@
 <!doctype html>
-<html>
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
-<meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<title>FAQ With Mobile C&C</title>
-<link href='https://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
-    <style type="text/css">
-        html,
-        body {
-            height: 100%;
-            width: 100%;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            font-family: 'Quicksand';
-        }
-body { background: #fafafa; }
-        .faq {
-            width: 50%;
-            border: 1px solid #222;
-        }
-
-        .faqitem .header {
-            padding: 15px;
-            background: #C0392B;
-            color: #fff;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            cursor: pointer;
-        }
-
-        .faqitem .header h4 {
-            margin: 0;
-        }
-
-        .faqitem .header .fa.fa-minus {
-            display: none;
-        }
-
-        .faqitem.jquery-accordion-active .fa.fa-minus {
-            display: block;
-        }
-
-        .faqitem.jquery-accordion-active .fa.fa-plus {
-            display: none;
-        }
-
-        .faqitem .content {
-            padding: 15px;
-            display: none;
-        }
-	</style>
-    <link href="https://www.jqueryscript.net/css/jquerysctipttop.css" rel="stylesheet" type="text/css">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+	<meta http-equiv="X-UA-Compatiable" content="ie=edge">
+	<title>FAQ Board</title>
+	<!-- Ion icons -->
+	<link href="https://unpkg.com/ionicons@4.5.10-0/dist/css/ionicons.min.css" rel="stylesheet">
+	<!-- <link rel="stylesheet" href="../../../resources/css/style-faq-board.css"> -->
+	<link th:href="@{/resources/css/style-faq-board.css}" rel="stylesheet">
 </head>
 <body>
-    <h1>FAQ With Mobile C&C</h1>
-<div id="carbon-block" align="center" style="margin:30px auto"></div>
-<div align="center" style="margin:30px auto"><script type="text/javascript"><!--
-google_ad_client = "ca-pub-2783044520727903";
-/* jQuery_demo */
-google_ad_slot = "2780937993";
-google_ad_width = 728;
-google_ad_height = 90;
-//-->
-</script>
-<script type="text/javascript"
-src="https://pagead2.googlesyndication.com/pagead/show_ads.js">
-</script></div>
-    <div class="faq">
-        <div class="faqitem">
-            <div class="header">
-                <h4>Why do we use it?</h4>
-                <i class="fa fa-plus"></i>
-                <i class="fa fa-minus"></i>
-            </div>
-            <div class="content">
-			It is a long established fact that a reader will be 
-			distracted by the readable content of a page when looking 
-			at its layout. The point of using Lorem Ipsum is that it 
-			has a more-or-less normal distribution of letters, as opposed
-			to using 'Content here, content here', making it look like readable English.</div>
-        </div>
-        <div class="faqitem">
-            <div class="header">
-                <h4>Where does it come from?</h4>
-                <i class="fa fa-plus"></i>
-                <i class="fa fa-minus"></i>
-            </div>
-            <div class="content">
-            Contrary to popular belief, Lorem Ipsum
-			is not simply random text. It has roots in a piece of 
-			classical Latin literature from 45 BC, making it over
-			2000 years old. Richard McClintock, a Latin professor
-			at Hampden-Sydney College in Virginia, looked up one
-			of the more obscure Latin words, consectetur, from 
-			a Lorem Ipsum passage, and going through the cites 
-			of the word in classical literature, discovered the
-			undoubtable source. Lorem Ipsum comes from sections 
-			1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" 
-			(The Extremes of Good and Evil) by Cicero, written in 45 BC. 
-			This book is a treatise on the theory of ethics, very popular
-			during the Renaissance. The first line of Lorem Ipsum, "Lorem 
-			ipsum dolor sit amet..", comes from a line in section 1.10.32.
-			The standard chunk of Lorem Ipsum used since the 1500s is 
-			reproduced below for those interested. Sections 1.10.32 and 
-			1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are 
-			also reproduced in their exact original form, accompanied 
-			by English versions from the 1914 translation by H. Rackham.</div>
-        </div>
-        <div class="faqitem">
-            <div class="header">
-                <h4>Where can I get some?</h4>
-                <i class="fa fa-plus"></i>
-                <i class="fa fa-minus"></i>
-            </div>
-            <div class="content">
-            There are many variations of passages of Lorem
-			Ipsum available, but the majority have suffered alteration in some
-			form, by injected humour, or randomised words which don't look
-			even slightly believable. If you are going to use a passage of
-			Lorem Ipsum, you need to be sure there isn't anything embarrassing
-			hidden in the middle of text. All the Lorem Ipsum generators on
-			the Internet tend to repeat predefined chunks as necessary,
-			making this the first true generator on the Internet. It 
-			uses a dictionary of over 200 Latin words, combined with a handful
-			of model sentence structures, to generate Lorem Ipsum which looks
-			reasonable. The generated Lorem Ipsum is therefore always free from
-			repetition, injected humour, or non-characteristic words etc.</div>
-        </div>
-    </div>
-
-	<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha384-vk5WoKIaW/vJyUAd9n/wmopsmNhiy+L2Z+SBxGYnUkunIxVxAv/UtMOhba/xskxh" crossorigin="anonymous"></script>
-	<script th:src="@{/resources/js/jquery-accordion.js}"></script>
-	<script>
-		$(".faq").accordion({
-            questionClass: '.header',
-            answerClass: '.content',
-            itemClass: '.faqitem'
-		});
-	</script>
-    <script type="text/javascript">
-
-  var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'UA-36251023-1']);
-  _gaq.push(['_setDomainName', 'jqueryscript.net']);
-  _gaq.push(['_trackPageview']);
-
-  (function() {
-    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-  })();
-
-</script>
-<script>
-try {
-  fetch(new Request("https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js", { method: 'HEAD', mode: 'no-cors' })).then(function(response) {
-    return true;
-  }).catch(function(e) {
-    var carbonScript = document.createElement("script");
-    carbonScript.src = "//cdn.carbonads.com/carbon.js?serve=CK7DKKQU&placement=wwwjqueryscriptnet";
-    carbonScript.id = "_carbonads_js";
-    document.getElementById("carbon-block").appendChild(carbonScript);
-  });
-} catch (error) {
-  console.log(error);
-}
-</script>
+	<section>
+		<div class="container">
+			<div class="accordion">
+				<div class="accordion-item" id="question1">
+					<a class="accordion-link" href="#question1">
+						Why do we use it?
+						<i class="icon ion-md-add"></i>
+						<i class="icon ion-md-remove"></i>
+					</a>
+					<div class="answer">
+						<p>
+							It is a long established fact that a reader will be 
+							distracted by the readable content of a page when looking 
+							at its layout. The point of using Lorem Ipsum is that it 
+							has a more-or-less normal distribution of letters, as opposed
+							to using 'Content here, content here', making it look like readable English.							
+						</p>					
+					</div>
+				</div>
+				<!-- -- -->
+				<div class="accordion-item" id="question2">
+					<a class="accordion-link" href="#question2">
+						Where does it come from?
+						<i class="icon ion-md-add"></i>
+						<i class="icon ion-md-remove"></i>
+					</a>
+					<div class="answer">
+						<p>
+				            Contrary to popular belief, Lorem Ipsum
+							is not simply random text. It has roots in a piece of 
+							classical Latin literature from 45 BC, making it over
+							2000 years old. Richard McClintock, a Latin professor
+							at Hampden-Sydney College in Virginia, looked up one
+							of the more obscure Latin words, consectetur, from 
+							a Lorem Ipsum passage, and going through the cites 
+							of the word in classical literature, discovered the
+							undoubtable source. Lorem Ipsum comes from sections 
+							1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" 
+							(The Extremes of Good and Evil) by Cicero, written in 45 BC. 
+							This book is a treatise on the theory of ethics, very popular
+							during the Renaissance. The first line of Lorem Ipsum, "Lorem 
+							ipsum dolor sit amet..", comes from a line in section 1.10.32.
+							The standard chunk of Lorem Ipsum used since the 1500s is 
+							reproduced below for those interested. Sections 1.10.32 and 
+							1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are 
+							also reproduced in their exact original form, accompanied 
+							by English versions from the 1914 translation by H. Rackham.
+						</p>				
+					</div>
+				</div>
+				<!-- -- -->
+				<div class="accordion-item" id="question3">
+					<a class="accordion-link" href="#question3">
+						Where can I get some?
+						<i class="icon ion-md-add"></i>
+						<i class="icon ion-md-remove"></i>
+					</a>
+					<div class="answer">
+						<p>
+				            There are many variations of passages of Lorem
+							Ipsum available, but the majority have suffered alteration in some
+							form, by injected humour, or randomised words which don't look
+							even slightly believable. If you are going to use a passage of
+							Lorem Ipsum, you need to be sure there isn't anything embarrassing
+							hidden in the middle of text. All the Lorem Ipsum generators on
+							the Internet tend to repeat predefined chunks as necessary,
+							making this the first true generator on the Internet. It 
+							uses a dictionary of over 200 Latin words, combined with a handful
+							of model sentence structures, to generate Lorem Ipsum which looks
+							reasonable. The generated Lorem Ipsum is therefore always free from
+							repetition, injected humour, or non-characteristic words etc.
+						</p>				
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
 </body>
 </html>
