add h1 to faq-board.html

--- a/src/main/webapp/resources/css/style-faq-board.css
+++ b/src/main/webapp/resources/css/style-faq-board.css
@@ -101,6 +101,13 @@ section{
 	display: block;
 }
 
+.welcome-text{
+	color: rgba(255,255,255,.6);
+	text-align: center;
+	padding-bottom: 30px;
+	font-size: 4.4rem;
+}
+
 
 
 
