--- a/src/main/webapp/WEB-INF/views/faq-board/faq-board.html
+++ b/src/main/webapp/WEB-INF/views/faq-board/faq-board.html
@@ -13,6 +13,7 @@
 <body>
 	<section>
 		<div class="container">
+			<h1 class="welcome-text">Welcome to Tech Support FAQ</h1>
 			<div class="accordion">
 				<div class="accordion-item" id="question1">
 					<a class="accordion-link" href="#question1">
