--- a/src/main/webapp/WEB-INF/views/type/Add.html
+++ b/src/main/webapp/WEB-INF/views/type/Add.html
@@ -8,8 +8,8 @@
 </head>
 <body>
 	<div class="container">
-		<h2>Add Category</h2>
-		<form th:action="@{/category/saveProcess}" th:object="${category}">
+		<h2>Add Type</h2>
+		<form th:action="@{/type/saveProcess}" th:object="${type}">
 			<div class="form-group">
 				<label>Code:</label> <input type="text" class="form-control" th:field="*{code}" placeholder="Enter Code" />
 			</div>
@@ -17,12 +17,18 @@
 				<label>Name:</label> <input type="text" class="form-control" th:field="*{name}" placeholder="Enter Name"/>
 			</div>
 			<div class="form-group">
-				<label>Description:</label><input type="text" th:field="*{desc}" class="form-control" placeholder="Enter Description"/>
-			</div>
+				<label>Category:</label>
+				<select th:field="*{category}" class="form-control">
+                         <option value=""> -- </option>
+                         <option th:each="category : ${categories}"
+                            th:value="${category}"
+                            th:utext="${category.name}"/>
+                  </select>
+			</div>			
 			<div class="pull-right">
 				<input type="submit" value="Submit" class="btn btn-primary"/>
-				<input onclick="window.location.href = 'listOfCategories'" class="btn btn-secondary" value="Cancel"/>
-			</div>
+				<input onclick="window.location.href = 'listOfTypes'" class="btn btn-secondary" value="Cancel"/>
+			</div>		
 		</form>
 	</div>
 </body>
