insert data to table type, work

--- a/src/main/webapp/WEB-INF/views/type/ListTypes.html
+++ b/src/main/webapp/WEB-INF/views/type/ListTypes.html
@@ -33,10 +33,10 @@
 						<td th:text="${type.name}"></td>
 						<td th:text="${type.desc}"></td>
 						<td th:text="${type.category.name}"></td>
-						<!-- <td>
-							<a class="btn btn-primary" th:href="@{'/category/updateCategory?categoryCode=' + ${category.code}}">Update</a>
-							<a class="btn btn-danger" th:href="@{'/category/deleteCategory?categoryCode=' + ${category.code}}">Delete</a>							
-						</td> -->
+						<td>
+							<!-- <a class="btn btn-primary" th:href="@{'/category/updateCategory?categoryCode=' + ${category.code}}">Update</a>
+							<a class="btn btn-danger" th:href="@{'/category/deleteCategory?categoryCode=' + ${category.code}}">Delete</a>	 -->						
+						</td>
 					</tr>
 				</th:block>
 			</tbody>
