--- a/src/main/webapp/WEB-INF/views/type/Add.html
+++ b/src/main/webapp/WEB-INF/views/type/Add.html
@@ -17,11 +17,14 @@
 				<label>Name:</label> <input type="text" class="form-control" th:field="*{name}" placeholder="Enter Name"/>
 			</div>
 			<div class="form-group">
+				<label>Description:</label> <input type="text" class="form-control" th:field="*{desc}" placeholder="Enter Description"/>
+			</div>
+			<div class="form-group">
 				<label>Category:</label>
-				<select th:field="*{category}" class="form-control">
+				<select th:field="*{categoryCode}" class="form-control">
                          <option value=""> -- </option>
                          <option th:each="category : ${categories}"
-                            th:value="${category}"
+                            th:value="${category.code}"
                             th:utext="${category.name}"/>
                   </select>
 			</div>			
