--- a/src/main/webapp/WEB-INF/views/type/ListTypes.html
+++ b/src/main/webapp/WEB-INF/views/type/ListTypes.html
@@ -34,8 +34,8 @@
 						<td th:text="${type.desc}"></td>
 						<td th:text="${type.category.name}"></td>
 						<td>
-							<!-- <a class="btn btn-primary" th:href="@{'/category/updateCategory?categoryCode=' + ${category.code}}">Update</a>
-							<a class="btn btn-danger" th:href="@{'/category/deleteCategory?categoryCode=' + ${category.code}}">Delete</a>	 -->						
+							<a class="btn btn-primary" th:href="@{'/type/updateType?typeCode=' + ${type.code}}">Update</a>
+							<a class="btn btn-danger" th:href="@{'/type/deleteType?typeCode=' + ${type.code}}">Delete</a>							
 						</td>
 					</tr>
 				</th:block>
