--- a/src/main/webapp/WEB-INF/views/type/Update.html
+++ b/src/main/webapp/WEB-INF/views/type/Update.html
@@ -12,6 +12,7 @@
 		<form th:action="@{/type/saveUpdate}" th:object="${type}">
 			<div class="form-group">
 				<label>Code:</label> <input type="text" class="form-control" th:field="*{code}" placeholder="Enter Code" />
+				<input type="hidden" th:value="${type.code}" id="oldTypeCode" name="oldTypeCode"/>
 			</div>
 			<div class="form-group">
 				<label>Name:</label> <input type="text" class="form-control" th:field="*{name}" placeholder="Enter Name"/>
