--- a/src/main/webapp/resources/css/style-faq-board.css
+++ b/src/main/webapp/resources/css/style-faq-board.css
@@ -102,7 +102,7 @@ section{
 }
 
 .welcome-text{
-	color: rgba(255,255,255,.6);
+	color: rgba(255,255,255,0.88);
 	text-align: center;
 	padding-bottom: 30px;
 	font-size: 4.4rem;
