link detail for answer and some css style

--- a/src/main/webapp/WEB-INF/views/faq-board/faq-board.html
+++ b/src/main/webapp/WEB-INF/views/faq-board/faq-board.html
@@ -22,9 +22,10 @@
 						<i class="icon ion-md-remove"></i>
 					</a>
 					<div class="answer">
-						<p th:text="${board.html}">
+						<p th:text="${board.html}" >
 						<!-- Answer goes here! -->						
-						</p>					
+						</p>
+						<a th:href="@{'/faq/listOfFaq'}">(Detail)</a>
 					</div>
 				</div>
 			</div>
