--- a/src/main/webapp/resources/css/style-faq-board.css
+++ b/src/main/webapp/resources/css/style-faq-board.css
@@ -24,7 +24,7 @@ section{
 }
 
 .container{
-	width: 100%;
+	width: 50%;
 	max-height: 80rem;
 	margin: 0 auto;
 	padding: 0 1.5rem;
@@ -108,6 +108,12 @@ section{
 	font-size: 4.4rem;
 }
 
+.answer a{
+	color: rgba(255,255,255,.6);
+	font-size: 1.4rem;
+	padding: 2rem;
+	text-decoration: none;
+}
 
 
 
