Display a string that contains HTML in Thymeleaf template ref:https://stackoverflow.com/questions/33136866/display-a-string-that-contains-html-in-thymeleaf-template we use th:utext

--- a/src/main/webapp/WEB-INF/views/faq-board/faq-board.html
+++ b/src/main/webapp/WEB-INF/views/faq-board/faq-board.html
@@ -25,7 +25,7 @@
 						<p th:text="${board.html}" >
 						<!-- Answer goes here! -->						
 						</p>
-						<a th:href="@{'/faq/listOfFaq'}">(Detail)</a>
+						<a th:href="@{'/faq/faqBoardDetail?boardId=' + ${board.id}}">(Detail)</a>
 					</div>
 				</div>
 			</div>
