edited title of question h1 to white color

--- a/src/main/webapp/resources/css/style-faq-board-detail.css
+++ b/src/main/webapp/resources/css/style-faq-board-detail.css
@@ -11,7 +11,7 @@ hr{
 section{
 	background-color: white !important;
 }
-
+/* 
 .welcome-text{
-	color: #283042 !important;
-}
+	color: #283042
+} */
