--- a/src/main/webapp/WEB-INF/views/faq-board/UpdateBoardContent.html
+++ b/src/main/webapp/WEB-INF/views/faq-board/UpdateBoardContent.html
@@ -26,10 +26,12 @@
 			</h1>
 			<div class="accordion">
 				<div class="accordion-item">
-					<div class="accordion-link" th:text="${board.html}">
-						<label>Question:</label> <input type="text" class="form-control" th:text="*{code}" placeholder="Enter Code" />
-						<input type="hidden" th:value="${category.code}" id="oldCategoryCode" name="oldCategoryCode"/>
-					</div>
+					<!-- <div class="accordion-link"> -->
+					<textarea cols="10" id="answer" name="answer" rows="5"
+								placeholder="Leave your comments here..." th:text="${board.html}" class="accordion-link">
+					</textarea>
+					<input type="submit" value="Update" class="btn btn-primary"  /> 
+					<a th:href="@{'/faq/faqBoardDetail?boardId=' + ${board.id}}" class="btn btn-secondary">Cancel</a>
 				</div>
 			</div>
 
@@ -38,6 +40,6 @@
 </body>
 
 <script type="text/javascript">
-			CKEDITOR.replace('comments');
+			CKEDITOR.replace('answer');
 	</script>
 </html>
