--- a/src/main/webapp/WEB-INF/views/faq-board/faq-board.html
+++ b/src/main/webapp/WEB-INF/views/faq-board/faq-board.html
@@ -13,7 +13,7 @@
 <body>
 	<section>
 		<div class="container">
-			<h1 class="welcome-text">Frequently Asked Questions</h1>
+			<h1 class ="welcome-text" style="color: white">Frequently Asked Questions</h1>
 			<div class="accordion" th:each="board : ${boardList}">
 				<div class="accordion-item" th:id="'board' + ${board.id}">
 					<a class="accordion-link" th:href="'#board' + ${board.id}" th:text="${board.title} + ' (' + ${board.viewCount} +' views)'">
