--- a/src/main/webapp/WEB-INF/views/faq-board/UpdateBoardContent.html
+++ b/src/main/webapp/WEB-INF/views/faq-board/UpdateBoardContent.html
@@ -20,15 +20,16 @@
 </head>
 <body>
 	<section>
-		<form class="container">
+		<form class="container" th:action="@{/faq/saveUpdate}" th:object="${board}">
 			<h1 class="welcome-text" th:utext="${board.title}">
 				<!-- Question title goes here! -->
 			</h1>
+			<input type="hidden" th:field="*{id}" id="id" name="id"/>
 			<div class="accordion">
 				<div class="accordion-item">
 					<!-- <div class="accordion-link"> -->
-					<textarea cols="10" id="answer" name="answer" rows="5"
-								placeholder="Leave your comments here..." th:text="${board.html}" class="accordion-link">
+					<textarea cols="10" id="html" name="html" rows="5"
+								placeholder="Leave your comments here..." th:field="*{html}" class="accordion-link">
 					</textarea>
 					<input type="submit" value="Update" class="btn btn-primary"  /> 
 					<a th:href="@{'/faq/faqBoardDetail?boardId=' + ${board.id}}" class="btn btn-secondary">Cancel</a>
@@ -40,6 +41,6 @@
 </body>
 
 <script type="text/javascript">
-			CKEDITOR.replace('answer');
+			CKEDITOR.replace('html');
 	</script>
 </html>
