--- a/src/main/webapp/WEB-INF/views/faq-board/faq-board-detail.html
+++ b/src/main/webapp/WEB-INF/views/faq-board/faq-board-detail.html
@@ -26,7 +26,7 @@
 			</h1>
 			<div class="accordion">
 				<div class="accordion-item">
-					<div class="accordion-link" th:text="${board.html}">
+					<div class="accordion-link" th:utext="${board.html}">
 						<!-- Answer goes here! -->
 						sdfasdf
 					</div>
