--- a/src/main/webapp/WEB-INF/views/faq-board/UpdateBoardContent.html
+++ b/src/main/webapp/WEB-INF/views/faq-board/UpdateBoardContent.html
@@ -19,47 +19,6 @@
 	<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-	<!-- <section>
-		<form class="container" th:action="@{/faq/saveUpdate}" th:object="${board}" enctype="multipart/form-data">
-		<form class="container" th:action="@{/faq/saveUpdate}" enctype="multipart/form-data">
-			<h1 class="welcome-text" th:utext="${board.title}">
-				Question title goes here!
-			</h1>
-			<input type="hidden" th:field="*{id}" id="id" name="id"/>
-			<div class="accordion">
-				<div class="accordion-item">
-					<div class="accordion-link">
-					<textarea cols="10" id="html" name="html" rows="5"
-								placeholder="Leave your comments here..." th:field="*{html}" class="accordion-link">
-					</textarea>
-					<label style="color:white; font-size: 1.33em; margin-top: 10px">Upload File:</label>
-					<input class="form-control-file" type="file" placeholder="Upload your file">
-					<input type="submit" value="Update" class="btn btn-primary"/>
-					<a th:href="@{'/faq/faqBoardDetail?boardId=' + ${board.id}}" class="btn btn-secondary">Cancel</a>
-				</div>
-			</div>
-
-		</form>
-		<div class="container">
-			<div class="accordion">
-				<div class="accordion-item">
-					<div class="accordion-link">
-							<form th:action="@{/faq/saveUpdate}" enctype="multipart/form-data" method="POST" th:object="${board}">						
-								<textarea cols="10" 
-										id="html" name="html" rows="5"
-										placeholder="Leave your comments here..." th:field="*{html}" class="accordion-link">
-								</textarea>
-									
-								<label style="color:white; font-size: 1.33em; margin-top: 10px">Upload File:</label>
-								<input type="file" name="file"><br />
-								<input type="submit" value="Update" class="btn btn-primary"/>
-							</form>
-						</div>
-					</div>
-				</div>
-		</div>
-	</section> -->
-	<!-- // -->
 	<section>
 		<div class="container">
 			<h1 class="welcome-text" th:utext="${board.title}">
@@ -70,22 +29,26 @@
 					<div class="accordion-link" th:utext="${board.html}">
 						<!-- Answer goes here! -->
 					</div>
-					<a class="btn btn-primary" th:href="@{'/faq/updateFaqContent?boardId=' + ${board.id}}">Edit Content</a>
+					<a class="btn btn-primary"
+						th:href="@{'/faq/updateFaqContent?boardId=' + ${board.id}}">Edit
+						Content</a>
 					<hr>
-					<form th:action="@{/faq/saveUpdate}" enctype="multipart/form-data" method="POST" th:object="${board}">
+					<form th:action="@{/faq/saveUpdate}" enctype="multipart/form-data"
+						method="POST" th:object="${board}">
 						<div></div>
-							<input type="hidden" th:value="${board.id}" id="boardId" name="boardId"/>
-							<textarea cols="10" 
-										id="html" name="html" rows="5"
-										placeholder="Write answer here..." th:field="*{html}" class="accordion-link">
+						<input type="hidden" th:value="${board.id}" id="boardId"
+							name="boardId" />
+						<textarea cols="10" id="html" name="html" rows="5"
+							placeholder="Write answer here..." th:field="*{html}"
+							class="accordion-link">
 							</textarea>
 						<div>
-							<label style="color:white; font-size: 1.33em; margin-top: 10px">Upload File:</label>
-							<input type="file" name="file"><br />
+							<label style="color: white; font-size: 1.33em; margin-top: 10px">Upload
+								File:</label> <input type="file" name="file"><br />
 						</div>
 						<div class="pull-right">
-							<input type="submit" value="Update" class="btn btn-primary"  /> 
-							<!-- <input onclick="window.location.href = 'listOfFaq'" class="btn btn-secondary" value="Cancel" /> -->
+							<input type="submit" value="Update" class="btn btn-primary" />
+							<input onclick="window.location.href = 'listOfFaq'" class="btn btn-secondary" value="Cancel" />
 						</div>
 					</form>
 				</div>
