--- a/src/main/webapp/WEB-INF/views/faq-board/UpdateBoardContent.html
+++ b/src/main/webapp/WEB-INF/views/faq-board/UpdateBoardContent.html
@@ -26,18 +26,13 @@
 			</h1>
 			<div class="accordion">
 				<div class="accordion-item">
-					<div class="accordion-link" th:utext="${board.html}">
-						<!-- Answer goes here! -->
-					</div>
-					<a class="btn btn-primary"
-						th:href="@{'/faq/updateFaqContent?boardId=' + ${board.id}}">Edit
-						Content</a>
-					<hr>
+					<!-- <div class="accordion-link" th:utext="${board.html}">
+						Answer goes here!
+					</div> -->
 					<form th:action="@{/faq/saveUpdate}" enctype="multipart/form-data"
 						method="POST" th:object="${board}">
 						<div></div>
-						<input type="hidden" th:value="${board.id}" id="boardId"
-							name="boardId" />
+						<input type="hidden" th:field="${board.id}" id ="id" name="id"/>
 						<textarea cols="10" id="html" name="html" rows="5"
 							placeholder="Write answer here..." th:field="*{html}"
 							class="accordion-link">
