validation when file already exists

--- a/src/main/webapp/WEB-INF/views/faq-board/faq-board-detail.html
+++ b/src/main/webapp/WEB-INF/views/faq-board/faq-board-detail.html
@@ -29,7 +29,9 @@
 					<div class="accordion-link" th:utext="${board.html}">
 						<!-- Answer goes here! -->
 					</div>
-					<a class="btn btn-primary" th:href="@{'/faq/updateFaqContent?boardId=' + ${board.id}}">Edit Content</a>
+					<div class="accordion-link">
+						<a class="btn btn-primary" th:href="@{'/faq/updateFaqContent?boardId=' + ${board.id}}">Edit Content</a>
+					</div>
 					<hr>
 					<form th:action="@{/faq/saveComment}">
 						<br>
