add image with url online to Faq detail page, and fixed image style

--- a/src/main/webapp/WEB-INF/views/faq-board/faq-board-detail.html
+++ b/src/main/webapp/WEB-INF/views/faq-board/faq-board-detail.html
@@ -32,6 +32,10 @@
 					<div class="accordion-link">
 						<a class="btn btn-primary" th:href="@{'/faq/updateFaqContent?boardId=' + ${board.id}}">Edit Content</a>
 					</div>
+					<div>
+						<img class = "image" alt="" src="https://www.online-image-editor.com/styles/2019/images/power_girl.png">
+						<img class = "image" alt="" src="https://www.online-image-editor.com/styles/2019/images/power_girl.png">
+					</div>
 					<hr>
 					<form th:action="@{/faq/saveComment}">
 						<br>
