no need to refresh workspace with f5 on eclipe, just got to To set auto-refresh, go to window > preferences > general > workspace and check the refresh using native hooks or polling and refresh on access check-boxes. ref=https://www.pydev.org/manual_101_eclipse.htmlhttps://www.pydev.org/manual_101_eclipse.html

--- a/src/main/webapp/WEB-INF/views/faq-board/faq-board-detail.html
+++ b/src/main/webapp/WEB-INF/views/faq-board/faq-board-detail.html
@@ -32,9 +32,13 @@
 					<div class="accordion-link">
 						<a class="btn btn-primary" th:href="@{'/faq/updateFaqContent?boardId=' + ${board.id}}">Edit Content</a>
 					</div>
-					<div th:if="!${#lists.isEmpty(attachList)}" th:each="attach : ${attachList}">
-						<!-- <img class = "image" alt="" th:src="@{/resources/Files/power_girl.png}"> -->
+					<!-- <div th:if="!${#lists.isEmpty(attachList)}" th:each="attach : ${attachList}">
+						<img class = "image" alt="" th:src="@{/resources/Files/power_girl.png}">
 						<img class = "image" alt="" th:src="@{/resources/Files/{path}(path=${attach.originalName})}">
+					</div> -->
+					<div>
+						<!-- <img class = "image" alt="" th:src="@{/resources/Files/power_girl.png}"> -->
+						<img class = "image" alt="" th:if="!${#lists.isEmpty(attachList)}" th:each="attach : ${attachList}" th:src="@{/resources/Files/{path}(path=${attach.originalName})}">
 					</div>
 					<hr>
 					<form th:action="@{/faq/saveComment}">
